<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_viewCardsSummary"
            android:icon="@android:drawable/ic_menu_view"
            android:title="@string/menu_viewCardsSummary"/>
        <item
            android:id="@+id/nav_viewCards"
            android:icon="@android:drawable/ic_menu_view"
            android:title="@string/menu_viewCards" />
        <item
            android:id="@+id/nav_viewCardSet"
            android:icon="@android:drawable/ic_menu_view"
            android:title="@string/menu_viewCardSet" />
        <item
            android:id="@+id/nav_addCards"
            android:icon="@android:drawable/ic_menu_view"
            android:title="@string/menu_addCards" />
        <item
            android:id="@+id/nav_sellCards"
            android:icon="@android:drawable/ic_menu_view"
            android:title="@string/menu_sellCards" />
    </group>
</menu>